--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -10,6 +10,10 @@
   opacity: 1;
   overflow: hidden;
 
+  @include media(md) {
+    display: none; // hide on tablet/mobile
+  }
+
   &::after {
     content: "";
     position: absolute;
