--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,9 @@
 @use "../abstracts/" as *;
 
 .form {
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   &__input {
     color: $color-gray-700;
@@ -14,6 +16,7 @@
     border-bottom: 0.45rem solid transparent;
     display: block;
     width: 100%;
+    height: 100%;
     position: relative;
     z-index: 1;
     scale: 1;
